--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -27,7 +27,7 @@ h2 {
 .search-form {
   display: flex;
   justify-content: center;
-  background-color: rgb(35, 4, 121);
+  background-color: rgb(0, 172, 224);
   padding-top: 20px;
   padding-bottom: 20px;
   margin-bottom: 20px;
@@ -44,7 +44,6 @@ input {
   height: 40px;
   padding-left: 15px;
   padding-right: 15px;
-  /* border: 1px solid black; */
   border-radius: 6px 0px 0px 6px;
   background-color: #ffffff;
   outline: none;
@@ -57,8 +56,7 @@ input {
   height: 40px;
   border: none;
   outline: none;
-  /* border: 1px solid black; */
-  background-color: rgb(228, 219, 219);
+  background-color: rgb(184, 216, 224);
   border-radius: 0px 6px 6px 0px;
   cursor: pointer;
   transition: background-color 250ms linear;
@@ -75,37 +73,7 @@ input {
 
 .search-btn:hover,
 .search-btn:focus {
-  background-color: rgb(177, 171, 192);
-}
-
-.load-more {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  width: 100px;
-  height: 40px;
-  padding-left: 15px;
-  padding-right: 15px;
-  border-radius: 6px;
-  border: none;
-  outline: none;
-  background-color: rgb(35, 4, 121);
-  color: white;
-  cursor: pointer;
-  transition: background-color 250ms linear;
-}
-
-.load-more:hover,
-.load-more:focus {
-  background-color: rgb(87, 56, 170);
-}
-
-.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
+  background-color: rgb(145, 192, 204);
 }
 
 .gallery {
@@ -119,35 +87,16 @@ input {
 
 .photo-card {
   display: block;
-  width: calc((100% - 4 * 20px) / 4);
+  width: calc((100% - 5 * 20px) / 5);
   margin: 10px;
   border: 1px solid #dad8d8;
-  border-radius: 0px 0px 6px 6px;
-  max-width: 450px;
-  min-width: 300px;
-  height: 350px;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  height: 450px;
+  width: 320px;
 }
 
 img {
   display: block;
-  height: 280px;
+  height: 100%;
   width: 100%;
-  max-width: 100%;
   object-fit: cover;
-}
-
-.info {
-  display: flex;
-  text-align: center;
-  height: 70px;
-  justify-content: space-around;
-  padding: 8px;
-}
-
-.info-item {
-  display: flex;
-  flex-direction: column;
-  color: rgb(35, 4, 121);
 }
